fixed text overflow issue on trip and user page

--- a/src/main/resources/static/css/trial.css
+++ b/src/main/resources/static/css/trial.css
@@ -60,3 +60,9 @@ button{
     border-radius: 3%;
     object-fit: cover;
 }
+.overflow{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: inherit;
+}
